# data-management-web

./: .dockerignore  .gitignore  ReadMe.md  docker-compose.yml
backend/: conftest.py  dockerfile  pyproject.toml  pytest.ini
backend/metadata/: views.py
backend/taxonomySearch/: views.py
backend/tests/: factories.py
backend/tests/Test_models/: test_models.py  test_views.py
frontend/: dockerfile  nginx.conf  package.json  vue.config.js
frontend/public/: index.html  robots.txt  sitemap.xml
frontend/src/: App.vue  main.js
frontend/src/router/: index.js
proxy/: docker-compose.yaml
