[tool.poetry]
name = "data-management-website"
version = "1.0.0"
description = "Database management"
authors = ["davitshahnazaryan3 <shahnazaryandavit1@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "data_management_website"}]

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.14.0"
djongo = "^1.3.6"
django = "4.1.2"
pymongo = {version = "3.12.1", extras = ["srv"]}
django-filter = "^22.1"
django-cors-headers = "^3.13.0"
djoser = "^2.1.0"
pillow = "^9.3.0"
django-countries = "^7.4.2"
django-environ = "^0.9.0"
django-redis = "^5.2.0"
django-rq = "^2.6.0"
backports-zoneinfo = "^0.2.1"
celery = "^5.2.7"
django-ckeditor = "^6.5.1"
django-admin-sortable2 = "^2.1.4"
drf-spectacular = "^0.26.0"
autopep8 = "^2.0.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
